website/styles/search.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

html {
    font-family: 'Montserrat', sans-serif;
}

img {
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

body {
    height: 100vh;
    width: 100vw;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
}

#result-container {
    position: relative;
    height: 100%;
    width: 100%;
}

#result-container > div {
    height: 100%;
    width: 100%;
    transform: translate(-50%, -50%);
    position: absolute;
    top: 50%;
    left: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #000;
    font-weight: 500;
}

#result-container h1 {
    font-size: 2.2rem;
    text-align: center;
    font-weight: 600;
    margin: 0;
}

#result-container p {
    font-size: 1.6rem;
    text-align: center;
    font-weight: 500;
    margin: 0;
    display: flex;
}

#result-container .link {
    text-decoration: underline;
    color: #00C2FF;
    cursor: pointer;
}

#result-container strong {
    font-weight: normal;
}

#container {
    position: relative;
    height: 100vh;
    width: 2000vw;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.film-container {
    position: relative;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

.film-container > img {
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    height: 103%;
    width: 103%;
    object-fit: cover;
    filter: blur(2.5px);
    z-index: -1;
}

.film-container > video {
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    height: 103%;
    width: 103%;
    object-fit: cover;
}


.content {
    position: absolute;
    width: 80vw;
    transform: translate(-50%, -50%);
    top: 38%;
    left: 50%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    color: #fff;
    font-weight: 500;
}

.content h1 {
    font-size: 6.25rem;
    font-weight: 800;
    margin: 0;
    text-transform: uppercase;
    text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.50);
}

.content p {
    font-size: 1.6rem;
    font-weight: 800;
    margin: 0;
    text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.50);
}

.button {
    position: relative;
}

.play-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 12px 24px;
    background-color: #222;
    color: #fff;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    margin: 1.5rem 0;
    font-size: 0.9rem;
    font-weight: bold;
    width: 165px;
    height: 60px;
    transition: 0.5s;
}

.play-button:hover {
    background-color: #000000;
    transition: 0.5s;
}

.buy-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 12px 24px;
    background-color: #3ACC56;
    color: #fff;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    margin: 1.5rem 0;
    font-size: 0.9rem;
    font-weight: bold;
    width: 165px;
    height: 60px;
    transition: 0.5s;
}

.buy-button::before {
    position: absolute;
    content: attr(data-tooltip);
    width: 90px;
    height: 35px;
    background-color: #000;
    font-size: 0.9rem;
    color: #fff;
    border-radius: 0.25rem;
    line-height: 35px;
    bottom: calc(60px + 28px + 10px);
    left: calc(50% - 90px / 2);
}

.buy-button::after {
    position: absolute;
    content: "";
    width: 0;
    height: 0;
    border: 10px solid transparent;
    border-top-color: #000;
    left: calc(50% - 10px);
    bottom: calc(100% - 30px);

}

.buy-button:hover {
    background-color: #2EA746;
    transition: 0.5s;
}

.buy-button::after,
.buy-button::before {
  opacity: 0;
  visibility: hidden;
  transition: all 0.5s;
}

.buy-button:hover:before,
.buy-button:hover:after {
  opacity: 1;
  visibility: visible;
}

.cast {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1.5rem;
    margin: 0 0 1.5rem 0;
}

.actor-container {
    position: relative;
}

.cast img {
    height: 80px;
    width: 80px;
    border-radius: 50%;
    object-fit: cover;
    border: 2px solid #fff;
}

.cast .actor-container::before {
    position: absolute;
    content: attr(data-tooltip);
    text-align: center;
    width: 190px;
    height: 35px;
    background-color: #000;
    font-size: 0.9rem;
    color: #fff;
    border-radius: 0.25rem;
    line-height: 35px;
    bottom: calc(60px + 28px + 10px);
    left: calc(50% - 190px / 2);
}

.cast .actor-container::after {
    position: absolute;
    content: "";
    width: 0;
    height: 0;
    border: 10px solid transparent;
    border-top-color: #000;
    left: calc(50% - 10px);
    bottom: calc(100% - 9px);

}

.cast .actor-container::after,
.cast .actor-container::before {
  opacity: 0;
  visibility: hidden;
  transition: all 0.5s;
}

.cast .actor-container:hover:before,
.cast .actor-container:hover:after {
  opacity: 1;
  visibility: visible;
}

.content p:last-of-type {
    max-width: 45vw;
    font-size: 1.6rem;
    font-weight: 700;
}

#film-carousel {
    position: absolute;
    left: 0;
    bottom: 3vh;
    height: 29vh;
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: end;
    justify-content: flex-start;
    gap: 3rem;
    overflow-x: scroll;
    scroll-behavior: smooth;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

#film-carousel img {
    height: 93%;
    aspect-ratio: 3/4;
    object-fit: cover;
    cursor: pointer;
    border-radius: 1.6rem;
    border: solid 3px #000;
    transition: 0.5s;
}

#film-carousel img:first-of-type {
    margin-left: 10vw;
}

#film-carousel img:last-of-type {
    margin-right: 10vw;
}

#film-carousel #selected {
    border: solid 3px #fff;
    height: 98%;
    transition: 0.5s;
}

.return-button {
    position: absolute;
    top: 3rem;
    right: 3rem;
    transform: translate(50%, -50%);
    width: 40px;
    height: 40px;
    cursor: pointer;
    transition: 0.5s;
    display: none;
    z-index: 99999;
    background: transparent;
    border: none;
}

.return-button img {
    height: 100%;
}

